[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scripts/PlayerHUD.gd" id="1"]
[ext_resource type="Texture2D" path="res://Art/ui/panel_dark.9.png" id="2"]
[ext_resource type="Texture2D" path="res://Art/cards/icon_block.png" id="3"]
[ext_resource type="Texture2D" path="res://Art/ui/gold.png" id="4"]
[ext_resource type="Script" path="res://scripts/SigilBar.gd" id="5"]

[node name="PlayerHUD" type="Control"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
grow_horizontal = 2
script = ExtResource("1")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2")
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="TopRow" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="HPContainer" type="HBoxContainer" parent="VBox/TopRow"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="VBox/TopRow/HPContainer"]
layout_mode = 2
text = "HP"

[node name="HPBar" type="ProgressBar" parent="VBox/TopRow/HPContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 24)
layout_mode = 2
size_flags_vertical = 4
step = 1.0
value = 50.0
show_percentage = false

[node name="HPLabel" type="Label" parent="VBox/TopRow/HPContainer/HPBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "40/80"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BlockContainer" type="HBoxContainer" parent="VBox/TopRow"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 4

[node name="Icon" type="TextureRect" parent="VBox/TopRow/BlockContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("3")
expand_mode = 1
stretch_mode = 5

[node name="BlockLabel" type="Label" parent="VBox/TopRow/BlockContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.6, 1, 1)
text = "0"

[node name="Spacer" type="Control" parent="VBox/TopRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Resources" type="HBoxContainer" parent="VBox/TopRow"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="EnergyGroup" type="HBoxContainer" parent="VBox/TopRow/Resources"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="VBox/TopRow/Resources/EnergyGroup"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("3")
expand_mode = 1
stretch_mode = 5

[node name="EnergyLabel" type="Label" parent="VBox/TopRow/Resources/EnergyGroup"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.4, 1)
text = "3/3"

[node name="SeedsGroup" type="HBoxContainer" parent="VBox/TopRow/Resources"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/TopRow/Resources/SeedsGroup"]
layout_mode = 2
text = "Seeds:"

[node name="SeedsLabel" type="Label" parent="VBox/TopRow/Resources/SeedsGroup"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.8, 0.4, 1)
text = "0"

[node name="GoldGroup" type="HBoxContainer" parent="VBox/TopRow/Resources"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="VBox/TopRow/Resources/GoldGroup"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("4")
expand_mode = 1
stretch_mode = 5

[node name="GoldLabel" type="Label" parent="VBox/TopRow/Resources/GoldGroup"]
unique_name_in_owner = true
layout_mode = 2
text = "99"

[node name="RunesGroup" type="HBoxContainer" parent="VBox/TopRow/Resources"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/TopRow/Resources/RunesGroup"]
layout_mode = 2
text = "Runes:"

[node name="RunesLabel" type="Label" parent="VBox/TopRow/Resources/RunesGroup"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.4, 0.8, 1)
text = "0"

[node name="HandGroup" type="HBoxContainer" parent="VBox/TopRow"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Label" type="Label" parent="VBox/TopRow/HandGroup"]
layout_mode = 2
text = "Hand:"

[node name="HandLabel" type="Label" parent="VBox/TopRow/HandGroup"]
unique_name_in_owner = true
layout_mode = 2
text = "0/5"

[node name="SigilContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 8
script = ExtResource("5")

[node name="StatusContainer" type="HBoxContainer" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
